--- a/app/src/main/assets/web/BetDetail.html
+++ b/app/src/main/assets/web/BetDetail.html
@@ -61,6 +61,53 @@
         document.getElementById("details").innerHTML = html;
 
         androidJs.changeUi(data.package.lottery_id, data.package.cancel_status == 0 && data.package.check_prize_status == 0, null);
+
+        <!--对山东快乐扑克开奖号码显示start-->
+        openCode=data.openCode;
+        if(data.package.lottery_id==14
+                &&openCode !== null && openCode !== undefined &&openCode !== ''){
+
+             document.getElementById('opencode01').style.display="none";
+             document.getElementById('opencode02').style.display="";
+             document.getElementById('span01').innerHTML=openCode.charAt(0);
+             document.getElementById('span02').innerHTML=openCode.charAt(3);
+             document.getElementById('span03').innerHTML=openCode.charAt(6);
+
+             var img01 = document.getElementById('img01');
+             if(openCode.charAt(1)=="s"){
+                img01.src = "images/ht_icon.png";
+             }else if(openCode.charAt(1)=="h"){
+                img01.src = "images/hongt_icon.png";
+             }else if(openCode.charAt(1)=="c"){
+                img01.src = "images/mh_icon.png";
+             }else if(openCode.charAt(1)=="d"){
+                img01.src = "images/fk_icon.png";
+             }
+
+             var img02 = document.getElementById('img02');
+             if(openCode.charAt(4)=="s"){
+                img02.src = "images/ht_icon.png";
+             }else if(openCode.charAt(4)=="h"){
+                img02.src = "images/hongt_icon.png";
+             }else if(openCode.charAt(4)=="c"){
+                img02.src = "images/mh_icon.png";
+             }else if(openCode.charAt(4)=="d"){
+                img02.src = "images/fk_icon.png";
+             }
+
+             var img03 = document.getElementById('img03');
+              if(openCode.charAt(7)=="s"){
+                img03.src = "images/ht_icon.png";
+             }else if(openCode.charAt(7)=="h"){
+                img03.src = "images/hongt_icon.png";
+             }else if(openCode.charAt(7)=="c"){
+                img03.src = "images/mh_icon.png";
+             }else if(openCode.charAt(7)=="d"){
+                img03.src = "images/fk_icon.png";
+             }
+        }
+        <!--对山东快乐扑克开奖号码显示start-->
+
     }
 </script>
 
@@ -106,8 +153,16 @@
             <tr>
                 <th colspan="3">模式：{{$data.package.modeName}}</th>
             </tr>
-            <tr>
+            <tr id="opencode01">
                 <th colspan="3">开奖号码：{{openCode}}</th>
+            </tr>
+            <tr  id="opencode02" style="display:none;">
+                <th colspan="3">开奖号码：
+
+                    <img  id="img01"  src="images/fk_icon.png"><span id="span01"></span>
+                    <img  id="img02"  src="images/fk_icon.png"><span id="span02"></span>
+                    <img  id="img03"  src="images/fk_icon.png"><span id="span03"></span>
+                </th>
             </tr>
             <tr>
                 <th colspan="3">中奖金额：{{$data.package.prize}}元</th>
